--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets\images\categories\101.png
+    - assets\images\categories\102.png
+    - assets\images\categories\103.png
+    - assets\images\categories\104.png
+    - assets\images\categories\105.png
+    - assets\images\categories\106.png
+  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
