--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.17
   provider: ^6.0.5
+  url_launcher: ^6.1.8
 
 dev_dependencies:
   flutter_test:
