--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.17
   provider: ^6.0.5
   url_launcher: ^6.1.8
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
