--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,15 +40,27 @@ dependencies:
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.8.0"
+  flutter_native_splash: ^0.3.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+
+flutter_native_splash:
+  color: "#42a5f5"
+  image: images/splash.png
+  android_gravity: fill
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
