--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,9 @@ flutter_icons:
   image_path: "assets/icon/icon.png"
 
 flutter_native_splash:
-  color: "#42a5f5"
+  color: "#D6D6BB"
   image: images/splash.png
-  android_gravity: fill
+  # android_gravity: fill
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
