--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets\images\categories\104.png
     - assets\images\categories\105.png
     - assets\images\categories\106.png
+    - assets\images\meals\1011.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
