--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.1.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.12.0 <3.2.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,15 +33,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.17
+  cupertino_icons: ^1.0.5
+  shared_preferences: ^2.0.18
   provider: ^6.0.5
-  url_launcher: ^6.1.8
+  url_launcher: ^6.1.10
   flutter_rating_bar: ^4.0.1
-  flutter_launcher_icons: "^0.8.0"
+  flutter_launcher_icons: ^0.12.0
+  easy_localization: ^3.0.0
+
 
 dev_dependencies:
-  flutter_native_splash: ^0.3.0
+  flutter_native_splash: ^2.2.18
 
   flutter_test:
     sdk: flutter
@@ -83,6 +85,7 @@ flutter:
     - assets\images\categories\105.png
     - assets\images\categories\106.png
     - assets\images\meals\1011.jpg
+    - assets/translations/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
